// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Block matches with previous snapshot. 1`] = `
<div>
  <div
    class="css-1iqmk5w-TextField"
  >
    <input
      class="css-b5txhi-TextField"
      placeholder="Placeholder"
    />
    <div
      class="css-11l6zdc-TextField"
    />
  </div>
</div>
`;

exports[`TextField Default matches with previous snapshot. 1`] = `
<div>
  <div
    class="css-1iqmk5w-TextField"
  >
    <input
      class="css-skram1-TextField"
      placeholder="Placeholder"
    />
    <div
      class="css-11l6zdc-TextField"
    />
  </div>
</div>
`;

exports[`TextField Disabled matches with previous snapshot. 1`] = `
<div>
  <div
    class="css-1iqmk5w-TextField"
  >
    <input
      class="css-92l7va-TextField"
      disabled=""
      placeholder="Placeholder"
    />
    <div
      class="css-11l6zdc-TextField"
    />
  </div>
</div>
`;

exports[`TextField Error matches with previous snapshot. 1`] = `
<div>
  <div
    class="css-1iqmk5w-TextField"
  >
    <input
      class="css-9r0qlt-TextField"
      placeholder="Placeholder"
    />
    <div
      class="css-3qe9u1-TextField"
    >
      It's wrong answer
    </div>
  </div>
</div>
`;
